<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@drawable/fondo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Llene los siguientes campos para realizar su registro:"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:textSize="16dp"/>
            <TextView
                android:id="@+id/txtNit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/Nit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/Nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"/>

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebEmailAddress" />

            <TextView
                android:id="@+id/txtTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/telefono"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/Telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtPassword"
                android:text="@string/password"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/registro"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:id="@+id/btnRegistro"
                android:background="@drawable/boton_redondo"
                android:backgroundTint="#105510"
                android:textColor="#fff"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>