<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".app.MainActivity"
    android:padding="10dp"
    android:background="@drawable/fondo">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="left"
            android:src="@drawable/circuito" />

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="left"
            android:src="@drawable/ned" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/usuario"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/Usuario"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:textColor="#fff"
            android:background="@drawable/boton_redondo"
            android:layout_marginRight="20dp"
            android:hint="@string/id"
            android:gravity="center"
            android:textColorHint="#FFF"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/password"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:textColor="#fff"
            android:layout_marginRight="20dp"
            android:background="@drawable/boton_redondo"
            android:hint="@string/password"
            android:gravity="center"
            android:textColorHint="#FFF"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_gravity="right"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="50dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/registro" />

        <TextView
            android:id="@+id/txtRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:text="@string/registro"
            android:textColor="#fff" />
    </LinearLayout>


    <Button
        android:id="@+id/btnSesion"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/boton_redondo"
        android:layout_gravity="center"
        android:text="@string/sesion"
        android:textSize="25dp"
        android:gravity="center"
        android:textColor="#fff"
        android:backgroundTint="#105510"/>

</LinearLayout>